--- a/index.html
+++ b/index.html
@@ -161,7 +161,14 @@
 
     async function connectWebSocket() {
         return new Promise((resolve, reject) => {
-            websocket = new WebSocket('ws://localhost:54321')
+            let location = window.location.host
+            let protocol = ""
+            if (window.location.protocol == "https:") {
+                protocol = "wss://"
+            } else {
+                protocol = "ws://"
+            }
+            websocket = new WebSocket(`${protocol}${location}/ws`)
 
             websocket.onopen = () => {
                 resolve()
